css/main.css
/*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html,
button,
input,
select,
textarea {
    color: #3B447C;
}

html {
    font-size: 1em;
    line-height: 1.4;
}

::-moz-selection {
    background: #897EE6;
    text-shadow: none;
}

::selection {
    background: #897EE6;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between images, videos, audio and canvas and the bottom of
 * their containers: h5bp.com/i/440
 */

audio,
canvas,
img,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

body {
	color: #3B447C;
	background: url(../assets/bg-illu.svg) 140% 140% no-repeat fixed, linear-gradient(45deg, white 0%, #F7F8FC 100%) fixed;
    font-family: "SF Pro Display", "SF UI Display", "Helvetica Neue", Helvetica, sans-serif;
	margin: auto 0;
}

strong {
	font-weight: 600;
}

.wrapper {
    width: 60%;
	/*max-width: 800px;*/
	height: 70%;
    margin: auto 12%;
	position: absolute;
	top: 0;
	bottom: 0;
}

h1 {
	margin: 0;
	margin-bottom: 75px;
	
	font-size:  96px;
	font-size: 7vw;
	line-height: 1.2em;
	font-weight: 900;
	
	word-wrap: break-word;
	overflow: visible;
	
	color: #897EE6;
	background: linear-gradient(45deg, #897EE6 0%, #E67EC1 100%);
	background-clip: text;
	  -webkit-background-clip: text;
	  -webkit-text-fill-color: transparent;
}

h2 {
	margin: 0;
	
	font: 2.25em/1.5em "SF Mono", Menlo, "Courier New", Courier, mono;
	font-size: 3vw;
	font-weight: 600;
	color: #BBBFDB;
}

p {
	max-width: 600px;
	
	font-size: 1em;
	line-height: 2em;
	letter-spacing: 0.4px;
}

ul.social {
	margin-top: 150px;
	padding: 0;
}

ul.social li {
	display: inline-block;
	height: 64px;
	width: 64px;
	border-radius: 32px;
	margin: 0 20px 20px 0;
	
	color: transparent;
}

li.tasklogue {
	background: url(../assets/tasklogue.svg) no-repeat center rgba(136, 125, 230, 0.1);
}

li.email {
	background: url(../assets/email.svg) no-repeat center rgba(230, 125, 193, 0.1);
}

li.dribbble {
	background: url(../assets/Dribbbble.svg) no-repeat center rgba(234, 75, 136, 0.1);
}

li.instagram {
	background:  url(../assets/instagram.svg) no-repeat center, linear-gradient(45deg, rgba(188, 97, 218, 0.1) 0%, rgba(87, 125, 255, 0.1) 100%);
}

li.twitter {
	background: url(../assets/twitter.svg) no-repeat center rgba(29, 160, 242, 0.1);
}






/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Image replacement
 */

.ir {
    background-color: transparent;
    border: 0;
    overflow: hidden;
    /* IE 6/7 fallback */
    *text-indent: -9999px;
}

.ir:before {
    content: "";
    display: block;
    width: 0;
    height: 150%;
}

/*
 * Hide from both screenreaders and browsers: h5bp.com/u
 */

.hidden {
    display: none !important;
    visibility: hidden;
}

/*
 * Hide only visually, but have it available for screenreaders: h5bp.com/v
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element to be focusable
 * when navigated to via the keyboard: h5bp.com/p
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

/*
 * Hide visually and from screenreaders, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/*
 * For IE 6/7 only
 * Include this rule to trigger hasLayout and contain floats.
 */

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-o-min-device-pixel-ratio: 5/4),
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid required HTTP connection: h5bp.com/r
   ========================================================================== */

@media print {
    * {
        background: transparent !important;
        color: #000 !important; /* Black prints faster: h5bp.com/s */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links for images, or javascript/internal links
     */

    .ir a:after,
    a[href^="javascript:"]:after,
    a[href^="#"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group; /* h5bp.com/t */
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    @page {
        margin: 0.5cm;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

